fix(backend): CurrencyService, IpFilteringService, OtpService and tests
- CurrencyService: inject RestTemplate, add RestTemplateConfig bean, align test fallback rate

- IpFilteringService: null-safe getFilteringStats and isGeographicallyBlocked

- IpFilteringServiceTest: use @Autowired, fix IPs for blacklist/suspicious/local

- OtpService: guard null email in saveOtp and verifyOtp to avoid NPE

Made-with: Cursor